--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:orientation="vertical"
-    android:background="@color/white">
+android:orientation="vertical">
 
 <TextView
     android:layout_width="match_parent"
@@ -16,9 +15,9 @@ android:orientation="vertical"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:background="@color/white"
-        android:orientation="horizontal"
         android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_back"
@@ -29,7 +28,8 @@ android:orientation="vertical"
             android:layout_marginRight="5dp"
             android:adjustViewBounds="true"
             android:scaleType="centerInside"
-            android:src="@drawable/back" />
+            android:src="@drawable/back"
+            android:onClick="onClick"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,6 +58,25 @@ android:orientation="vertical"
                 android:textSize="14sp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/box">
+
+            <TextView
+                android:id="@+id/txt_mytxt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@null"
+                android:gravity="center"
+                android:text="내가 쓴 글"
+                android:textColor="@color/text_gray"
+                android:textSize="14sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <Button
