--- a/app/src/main/res/layout/activity_buy_focus.xml
+++ b/app/src/main/res/layout/activity_buy_focus.xml
@@ -37,6 +37,11 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp">
             <TextView
                 android:id="@+id/txt_name"
                 android:layout_width="wrap_content"
@@ -58,6 +63,7 @@
 두줄까지 가능합니다."
                 android:textColor="@color/black"
                 android:textSize="22sp" />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -137,13 +143,14 @@
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="@color/line_gray"/>
+
                 <TextView
                     android:id="@+id/txt_company_focus"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:layout_weight="1"
                     android:fontFamily="@font/notosanscjkkr_medium_cus"
                     android:gravity="center"
                     android:includeFontPadding="false"
