--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -16,9 +15,9 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:background="@color/white"
-        android:orientation="horizontal"
         android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_back"
@@ -58,25 +57,37 @@
                 android:textSize="14sp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/box">
+
+            <TextView
+                android:id="@+id/txt_mytxt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@null"
+                android:gravity="center"
+                android:text="내가 쓴 글"
+                android:textColor="@color/text_gray"
+                android:textSize="14sp" />
+        </LinearLayout>
     </LinearLayout>
+
 
     <Button
         android:id="@+id/btn_write"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/point_blue"
-        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
-        android:includeFontPadding="false"
-        android:onClick="onClick"
-        android:text="팝니다 글쓰기"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:background="@drawable/sell_write"
+        android:onClick="onClick"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_sell"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" />
+        android:layout_height="match_parent"/>
 </LinearLayout>
