--- a/app/src/main/res/layout/list_item_store.xml
+++ b/app/src/main/res/layout/list_item_store.xml
@@ -18,16 +18,15 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="bottom"
             android:text="글쓴이 제목영역입니다."
             android:textColor="@color/black"
             android:textSize="24sp" />
 
         <ImageView
-            android:id="@+id/img_deal"
             android:layout_width="240px"
             android:layout_height="match_parent"
             android:layout_gravity="right"
@@ -46,7 +45,6 @@
             android:layout_weight="1">
 
             <ImageView
-                android:id="@+id/img_store"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/banner1" />
@@ -66,7 +64,6 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tv_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="동전교환기"
@@ -77,58 +74,81 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="1,125,000원"
-                    android:textColor="@color/black"
-                    android:textSize="20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_address"
-                    android:layout_width="match_parent"
+
+                    android:layout_width="60dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/notosanscjkkr_medium_cus"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:text="임대"
+                    android:background="@color/point_gold"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="35평 / 1층"
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="16dp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginTop="7dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/notosanscjkkr_medium_cus"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:text="매매"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/text_gray" />
+                    android:layout_marginRight="10dp"
+                    android:background="@color/black" />
 
                 <TextView
-                    android:id="@+id/tv_gamecount"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/notosanscjkkr_medium_cus"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:text="서울"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/text_gray" />
+                    android:layout_marginRight="10dp"
+                    android:background="@color/black" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
                     android:text="안심거래"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/point_skyblue"
                     android:textSize="16sp" />
             </LinearLayout>
 
@@ -137,7 +157,6 @@
                 android:layout_height="50dp">
 
                 <ImageView
-                    android:id="@+id/img_call"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/call" />
