--- a/app/src/main/res/layout/activity_local.xml
+++ b/app/src/main/res/layout/activity_local.xml
@@ -137,8 +137,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
                     android:gravity="center"
-                    android:text="경상"
+                    android:text="경북"
                     android:textColor="@color/white"
                     android:textSize="30dp" />
             </RelativeLayout>
