--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -180,11 +180,108 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"></LinearLayout>
+                android:layout_marginRight="3dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:background="#333a4a"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/txt_house"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:text="매장매매"
+                        android:textColor="@color/white"
+                        android:textSize="30sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:background="#333a4a"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/txt_game"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:text="게임기매매"
+                        android:textColor="@color/white"
+                        android:textSize="30sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="3dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:background="#333a4a"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/txt_car"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:text="배차정보"
+                        android:textColor="@color/white"
+                        android:textSize="30sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:background="#333a4a"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/txt_other"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:text="주변기기"
+                        android:textColor="@color/white"
+                        android:textSize="30sp" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/img_add"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@drawable/main_add"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
