--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -185,6 +185,11 @@
         </LinearLayout>
 
     </LinearLayout>
+    <ImageView
+        android:id="@+id/img_add"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:adjustViewBounds="true"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
