--- a/app/src/main/res/layout/activity_promotion_focus.xml
+++ b/app/src/main/res/layout/activity_promotion_focus.xml
@@ -189,10 +189,19 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-    <ImageView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/btn_call"
-        android:adjustViewBounds="true"
-        />
+        android:background="@color/point_navy"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/call_direct" />
+    </LinearLayout>
 </LinearLayout>
