--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -7,6 +7,6 @@
         android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:src="@drawable/banner1"
+        android:src="@drawable/basic_banner"
         android:adjustViewBounds="true" />
 </LinearLayout>
