--- a/app/src/main/res/layout/list_item_join_mygame.xml
+++ b/app/src/main/res/layout/list_item_join_mygame.xml
@@ -22,7 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="1dp"
-                android:background="@color/white" />
+                android:background="@color/white"
+                android:gravity="center"/>
         </LinearLayout>
 
         <LinearLayout
@@ -38,7 +39,8 @@
                 android:layout_height="match_parent"
                 android:layout_margin="1dp"
                 android:background="@color/white"
-                android:inputType="number"/>
+                android:inputType="number"
+                android:gravity="center"/>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
