--- a/app/src/main/res/layout/list_item_sell.xml
+++ b/app/src/main/res/layout/list_item_sell.xml
@@ -55,7 +55,7 @@
                         android:layout_weight="1.2"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/banner1" />
+                        android:src="@drawable/basic_banner" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
