--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="point">#182641</color>
     <color name="point_blue">#31459b</color>
     <color name="point_navy">#334475</color>
+    <color name="point_navy2">#333a4a</color>
     <color name="point_skyblue">#19b7a0</color>
     <color name="point_gold">#be9b61</color>
     <color name="point_red">#ff696b</color>
