20180524-pjh Store_Focus / Store_Write 동영상 재생확인필요 / 동영상 업로드 기능 추가 확인필요

--- a/app/src/main/res/layout/activity_buy_write.xml
+++ b/app/src/main/res/layout/activity_buy_write.xml
@@ -20,7 +20,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/back" />
+            android:src="@drawable/back"
+            android:onClick="onClick"/>
 
     </LinearLayout>
 
