--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,8 @@
                     android:includeFontPadding="false"
                     android:textColor="@color/white"
                     android:textColorHint="#445272"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:text="01068785496"/>
             </LinearLayout>
 
             //비밀번호 입력
@@ -94,7 +95,8 @@
                     android:textColor="@color/white"
                     android:textColorHint="#445272"
                     android:textSize="16sp"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword"
+                    android:text="1234"/>
             </LinearLayout>
 
             //로그인 버튼
