--- a/app/src/main/res/layout/activity_buy_focus.xml
+++ b/app/src/main/res/layout/activity_buy_focus.xml
@@ -17,7 +17,8 @@
             android:layout_marginRight="5dp"
             android:layout_marginTop="10dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/back" />
+            android:src="@drawable/back"
+            android:onClick="onClick"/>
 
         <ImageView
             android:id="@+id/img"
