--- a/app/src/main/res/layout/activity_sell_write.xml
+++ b/app/src/main/res/layout/activity_sell_write.xml
@@ -20,7 +20,8 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/back" />
+            android:src="@drawable/back"
+            android:onClick="onClick"/>
 
     </LinearLayout>
 
