--- a/app/src/main/res/layout/activity_store_focus.xml
+++ b/app/src/main/res/layout/activity_store_focus.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -17,8 +18,8 @@
             android:layout_marginRight="5dp"
             android:layout_marginTop="10dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/back"
-            android:onClick="onClick"/>
+            android:onClick="onClick"
+            android:src="@drawable/back" />
 
         <ImageView
             android:id="@+id/img"
@@ -28,47 +29,42 @@
             android:adjustViewBounds="true"
             android:src="@drawable/deal_possible" />
     </RelativeLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/white">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <test.ojig.Sell.Sell_ViewPager
-                android:id="@+id/sell_viewpager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                />
+
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:background="@color/back">
+                android:layout_height="wrap_content">
 
-                <com.matthewtamlin.sliding_intro_screen_library.indicators.DotIndicator
-                    android:id="@+id/indicator"
-                    android:layout_width="wrap_content"
+                <VideoView
+                    android:id="@+id/vv"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentRight="true"
+                    android:adjustViewBounds="true" />
+
+                <ImageView
+                    android:id="@+id/player"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:padding="5dp" />
+                    android:layout_centerInParent="true"
+                    android:adjustViewBounds="true"
+                    android:onClick="onClick"
+                    android:src="@drawable/play" />
             </RelativeLayout>
-            <TextView
-                android:id="@+id/txt_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:fontFamily="@font/notosanscjkkr_medium_cus"
-                android:includeFontPadding="false"
-                android:text="동전교환기"
-                android:textColor="@color/text_gray"
-                android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/txt_title"
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/notosansmonocjkkr_bold_cus"
@@ -85,7 +81,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/txt_amount"
+                    android:id="@+id/tv_type"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
@@ -103,7 +99,7 @@
                     android:background="@color/text_gray" />
 
                 <TextView
-                    android:id="@+id/txt_address"
+                    android:id="@+id/tv_address"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
@@ -132,28 +128,111 @@
                     android:textSize="16sp" />
             </LinearLayout>
 
-            <TextView
+            <LinearLayout
+                android:id="@+id/layout_deal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginBottom="10dp"
-                android:layout_marginRight="10dp"
-                android:fontFamily="@font/notosansmonocjkkr_bold_cus"
-                android:gravity="center_vertical"
-                android:includeFontPadding="false"
-                android:text="1,123,456원"
-                android:textColor="@color/black"
-                android:textSize="26sp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="매매가 : "
+                    android:textColor="@color/black"
+                    android:textSize="26sp" />
+
+                <TextView
+                    android:id="@+id/tv_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                    android:gravity="center_vertical"
+                    android:includeFontPadding="false"
+                    android:text="1,123,456원"
+                    android:textColor="@color/black"
+                    android:textSize="26sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_rent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="보증금 : "
+                        android:textColor="@color/black"
+                        android:textSize="26sp" />
+
+                    <TextView
+                        android:id="@+id/tv_deposit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                        android:gravity="center_vertical"
+                        android:includeFontPadding="false"
+                        android:text="1,123,456원"
+                        android:textColor="@color/black"
+                        android:textSize="26sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="임대료 : "
+                        android:textColor="@color/black"
+                        android:textSize="26sp" />
+
+                    <TextView
+                        android:id="@+id/tv_rental"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginRight="10dp"
+                        android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                        android:gravity="center_vertical"
+                        android:includeFontPadding="false"
+                        android:text="1,123,456원"
+                        android:textColor="@color/black"
+                        android:textSize="26sp" />
+                </LinearLayout>
+            </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/line_gray"/>
+                android:background="@color/line_gray" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
 
                 <TextView
-                    android:id="@+id/txt_company_name"
+                    android:id="@+id/tv_company_name"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -164,17 +243,19 @@
                     android:text="오직게임장"
                     android:textColor="@color/black"
                     android:textSize="20sp" />
+
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/line_gray"/>
+                    android:background="@color/line_gray" />
+
                 <TextView
-                    android:id="@+id/txt_company_focus"
-                    android:layout_weight="1"
+                    android:id="@+id/tv_company_focus"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:layout_weight="1"
                     android:fontFamily="@font/notosanscjkkr_medium_cus"
                     android:gravity="center"
                     android:includeFontPadding="false"
@@ -190,10 +271,11 @@
                     android:adjustViewBounds="true"
                     android:src="@drawable/address_icon" />
             </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:background="@color/line_gray_bold"/>
+                android:background="@color/line_gray_bold" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -232,7 +314,7 @@
                             android:src="@drawable/circle_black" />
 
                         <TextView
-                            android:id="@+id/txt_sell_name"
+                            android:id="@+id/tv_store_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -259,8 +341,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -305,6 +387,7 @@
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
