--- a/app/src/main/res/layout/activity_store_write.xml
+++ b/app/src/main/res/layout/activity_store_write.xml
@@ -5,6 +5,25 @@
     android:orientation="vertical">
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp">
+
+        <ImageView
+            android:id="@+id/img_back"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/back" />
+
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -21,6 +40,32 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_margin="3dp">
+
+                    <Button
+                        android:id="@+id/btn_deal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_selector"
+                        android:onClick="onClick"
+                        android:text="매매글 작성" />
+
+                    <Button
+                        android:id="@+id/btn_rent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_selector"
+                        android:onClick="onClick"
+                        android:text="임대글 작성" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="50dp">
 
                     <TextView
@@ -32,8 +77,11 @@
                         android:textSize="30dp" />
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
                 <EditText
-                    android:id="@+id/edt_title"
+                    android:id="@+id/et_title"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_margin="5dp"
@@ -43,40 +91,94 @@
                     android:includeFontPadding="false"
                     android:textColor="@color/text_gray"
                     android:textSize="14sp" />
-
-                <EditText
-                    android:id="@+id/edt_name"
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/edittext_bg"
-                    android:hint="구입희망 게임기명"
-                    android:textAlignment="center"
-                    android:textColor="@color/text_gray" />
+                    android:layout_height="50dp">
+                    <Button
+                        android:id="@+id/btn_area"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:fontFamily="@font/notosanscjkkr_demilight_cus"
+                        android:gravity="center"
+                        android:hint="지역"
+                        android:includeFontPadding="false"
+                        android:textColor="@color/text_gray"
+                        android:background="@color/white"
+                        android:textSize="14sp"
+                        android:onClick="onClick"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <EditText
+                        android:id="@+id/et_space"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/edittext_bg"
+                        android:hint="평수"
+                        android:inputType="number"
+                        android:textAlignment="center" />
+
+                    <EditText
+                        android:id="@+id/et_layer"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/edittext_bg"
+                        android:hint="층수"
+                        android:inputType="number"
+                        android:textAlignment="center" />
+                </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/layout_deal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/et_price"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_margin="5dp"
+                        android:background="@drawable/edittext_bg"
+                        android:hint="매매가"
+                        android:inputType="number"
+                        android:textAlignment="center"
+                        android:textColor="@color/text_gray" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layout_rent"
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:orientation="horizontal">
 
-                    <Button
-                        android:id="@+id/btn_area"
+                    <EditText
+                        android:id="@+id/et_deposit"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/edittext_bg"
-                        android:text="지역선택"
-                        android:textColorHint="@color/text_gray" />
+                        android:hint="보증금"
+                        android:inputType="number"
+                        android:textAlignment="center" />
 
                     <EditText
-                        android:id="@+id/edt_amount"
+                        android:id="@+id/et_rental"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/edittext_bg"
-                        android:hint="구매희망 갯수"
+                        android:hint="임대료"
+                        android:inputType="number"
                         android:textAlignment="center" />
                 </LinearLayout>
 
@@ -89,7 +191,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/edt_memo"
+                    android:id="@+id/et_memo"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:layout_margin="5dp"
@@ -124,94 +226,94 @@
                     android:textSize="16dp" />
 
 
-                    <LinearLayout
-                        android:id="@+id/img_layout1"
+                <LinearLayout
+                    android:id="@+id/img_layout1"
+                    android:layout_width="match_parent"
+                    android:layout_height="170dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/img_write0"
                         android:layout_width="match_parent"
-                        android:layout_height="170dp"
-                        android:orientation="horizontal"
-                        android:layout_weight="1">
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:onClick="onClick"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/img_add" />
 
-                        <ImageView
-                            android:id="@+id/img_write0"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:src="@drawable/img_add"
-                            android:layout_margin="5dp"
-                            android:scaleType="centerCrop"
-                            android:onClick="onClick"/>
-
-                        <ImageView
-                            android:id="@+id/img_write1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:src="@drawable/img_add"
-                            android:layout_margin="5dp"
-                            android:onClick="onClick"
-                            android:scaleType="centerCrop"
-                            android:visibility="invisible"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/img_layout2"
+                    <ImageView
+                        android:id="@+id/img_write1"
                         android:layout_width="match_parent"
-                        android:layout_height="170dp"
-                        android:orientation="horizontal"
-                        android:layout_weight="1">
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:onClick="onClick"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/img_add"
+                        android:visibility="invisible" />
+                </LinearLayout>
 
-                        <ImageView
-                            android:id="@+id/img_write2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:src="@drawable/img_add"
-                            android:layout_margin="5dp"
-                            android:visibility="invisible"
-                            android:scaleType="centerCrop"
-                            android:onClick="onClick"/>
+                <LinearLayout
+                    android:id="@+id/img_layout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="170dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/img_write3"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:src="@drawable/img_add"
-                            android:layout_margin="5dp"
-                            android:visibility="invisible"
-                            android:scaleType="centerCrop"
-                            android:onClick="onClick"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/img_layout3"
+                    <ImageView
+                        android:id="@+id/img_write2"
                         android:layout_width="match_parent"
-                        android:layout_height="170dp"
-                        android:orientation="horizontal"
-                        android:layout_weight="1">
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:onClick="onClick"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/img_add"
+                        android:visibility="invisible" />
 
-                        <ImageView
-                            android:id="@+id/img_write4"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:src="@drawable/img_add"
-                            android:layout_margin="5dp"
-                            android:scaleType="centerCrop"
-                            android:visibility="invisible"
-                            android:onClick="onClick"/>
+                    <ImageView
+                        android:id="@+id/img_write3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:onClick="onClick"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/img_add"
+                        android:visibility="invisible" />
+                </LinearLayout>
 
-                        <ImageView
-                            android:id="@+id/img_write5"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:src="@drawable/img_add"
-                            android:layout_margin="5dp"
-                            android:visibility="invisible"
-                            android:scaleType="centerCrop"
-                            android:onClick="onClick" />
-                    </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/img_layout3"
+                    android:layout_width="match_parent"
+                    android:layout_height="170dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/img_write4"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:onClick="onClick"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/img_add"
+                        android:visibility="invisible" />
+
+                    <ImageView
+                        android:id="@+id/img_write5"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:onClick="onClick"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/img_add"
+                        android:visibility="invisible" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -229,7 +331,7 @@
                     android:textSize="30sp" />
 
                 <EditText
-                    android:id="@+id/edt_company_name"
+                    android:id="@+id/et_company_name"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_margin="5dp"
@@ -239,7 +341,7 @@
                     android:textSize="20sp" />
 
                 <EditText
-                    android:id="@+id/edt_phone"
+                    android:id="@+id/et_phone"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_margin="5dp"
@@ -249,7 +351,7 @@
                     android:textSize="20sp" />
 
                 <EditText
-                    android:id="@+id/edt_company_focus"
+                    android:id="@+id/et_company_focus"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_margin="5dp"
