--- a/app/src/main/res/layout/list_item_store.xml
+++ b/app/src/main/res/layout/list_item_store.xml
@@ -18,6 +18,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -27,6 +28,7 @@
             android:textSize="24sp" />
 
         <ImageView
+            android:id="@+id/img_deal"
             android:layout_width="240px"
             android:layout_height="match_parent"
             android:layout_gravity="right"
@@ -77,26 +79,49 @@
                 android:orientation="horizontal">
 
                 <TextView
-
+                    android:id="@+id/tv_type"
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
+                    android:background="@color/point_gold"
                     android:fontFamily="@font/notosanscjkkr_medium_cus"
                     android:gravity="center_vertical"
                     android:includeFontPadding="false"
                     android:text="임대"
-                    android:background="@color/point_gold"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="35평 / 1층"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="16dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_space"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="35평 "
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="16dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text=" / "
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="16dp" />
+                    <TextView
+                        android:id="@+id/tv_layer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="1층"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="14dp" />
+                </LinearLayout>
             </LinearLayout>
 
 
@@ -124,6 +149,7 @@
                     android:background="@color/black" />
 
                 <TextView
+                    android:id="@+id/tv_address"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="10dp"
