--- a/app/src/main/res/layout/activity_promotion.xml
+++ b/app/src/main/res/layout/activity_promotion.xml
@@ -31,7 +31,6 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             ></test.ojig.promotion.Promotion_ViewPager>
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="20dp"
@@ -45,6 +44,11 @@
                 android:layout_centerHorizontal="true"
                 android:padding="5dp" />
         </RelativeLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@color/black"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list_promotion"
