--- a/app/src/main/res/layout/activity_promotion_focus.xml
+++ b/app/src/main/res/layout/activity_promotion_focus.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <ScrollView
         android:layout_width="match_parent"
@@ -12,29 +13,47 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp">
-
-                <ImageView
-                    android:id="@+id/img"
+                android:layout_height="wrap_content">
+                <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:adjustViewBounds="true"
-                    android:background="@color/black"
-                    />
+                    android:layout_height="wrap_content">
 
+                    <ImageView
+                        android:id="@+id/img"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:scaleType="fitXY" />
+                    <VideoView
+                        android:id="@+id/vv"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:layout_gravity="center"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+                </android.support.constraint.ConstraintLayout>
                 <ImageView
+                    android:id="@+id/player"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/play" />
+                    android:onClick="onClick"
+                    android:src="@drawable/play"
+                    android:visibility="visible"/>
+
+                <ProgressBar
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:adjustViewBounds="true"
+                    android:progress="50"
+                    android:progressDrawable="@drawable/custom_progressbar"
+                    android:id="@+id/Progressbar"
+                    android:visibility="gone"/>
             </RelativeLayout>
 
             <LinearLayout
@@ -199,8 +218,8 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="15dp"
             android:adjustViewBounds="true"
             android:src="@drawable/call_direct" />
     </LinearLayout>
