--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -8,5 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:src="@drawable/basic_banner"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
 </LinearLayout>
