--- a/app/src/main/res/layout/list_item_store.xml
+++ b/app/src/main/res/layout/list_item_store.xml
@@ -1,192 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/layout"
     android:orientation="vertical">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="15dp"
-        android:background="@color/line_gray" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal">
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <TextView
-            android:id="@+id/tv_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="bottom"
-            android:text="글쓴이 제목영역입니다."
-            android:textColor="@color/black"
-            android:textSize="24sp" />
-
-        <ImageView
-            android:id="@+id/img_deal"
-            android:layout_width="240px"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:src="@drawable/deal_possible" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:orientation="horizontal">
-
-        <LinearLayout
+            android:layout_height="1dp"
+            android:background="@color/line_gray_bold"/>
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/basic_banner" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
+                android:id="@+id/img_deal"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:adjustViewBounds="true"
+                android:src="@drawable/deal_possible" />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="25dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_title"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="동전교환기"
-                    android:textColor="@color/black"
-                    android:textSize="20dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_type"
-                    android:layout_width="60dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/point_gold"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="15dp"
                     android:fontFamily="@font/notosanscjkkr_medium_cus"
-                    android:gravity="center_vertical"
                     android:includeFontPadding="false"
-                    android:text="임대"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
-
+                    android:text="글쓰기 제목 영역입니다."
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_space"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="35평 "
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="16dp"/>
+                    <ImageView
+                        android:id="@+id/img_sell"
+                        android:layout_width="match_parent"
+                        android:layout_height="130dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="1.2"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/basic_banner" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text=" / "
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="16dp" />
-                    <TextView
-                        android:id="@+id/tv_layer"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="1층"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="14dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_price"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="3dp"
+                            android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                            android:includeFontPadding="false"
+                            android:text="1,125,800원"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:gravity="top"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/btn_type"
+                                android:layout_width="50dp"
+                                android:layout_height="20dp"
+                                android:layout_marginRight="5dp"
+                                android:background="@color/point_gold"
+                                android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                                android:includeFontPadding="false"
+                                android:text="임  대"
+                                android:textColor="@color/white"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/tv_space"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="5dp"
+                                android:fontFamily="@font/notosanscjkkr_medium_cus"
+                                android:gravity="center_vertical"
+                                android:includeFontPadding="false"
+                                android:text="35평"
+                                android:textColor="@color/black"
+                                android:textSize="16sp" />
+
+                            <TextView
+                                android:id="@+id/tv_layer"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="5dp"
+                                android:fontFamily="@font/notosanscjkkr_medium_cus"
+                                android:gravity="center_vertical"
+                                android:includeFontPadding="false"
+                                android:text="/ 1층"
+                                android:textColor="@color/black"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="20dp"
+                            android:layout_marginBottom="8dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/tv_address"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="5dp"
+                                android:fontFamily="@font/notosanscjkkr_medium_cus"
+                                android:gravity="center_vertical"
+                                android:includeFontPadding="false"
+                                android:text="서울"
+                                android:textColor="@color/black"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:layout_width="1dp"
+                                android:layout_height="14dp"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="5dp"
+                                android:background="@color/black" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="10dp"
+                                android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                                android:gravity="center_vertical"
+                                android:includeFontPadding="false"
+                                android:text="안심거래"
+                                android:textColor="@color/point_skyblue"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                        <Button
+                            android:id="@+id/img_call"
+                            android:layout_width="match_parent"
+                            android:layout_height="35dp"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginRight="5dp"
+                            android:background="@color/point"
+                            android:fontFamily="@font/notosansmonocjkkr_bold_cus"
+                            android:includeFontPadding="false"
+                            android:onClick="onClick"
+                            android:text="바로 전화"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_marginTop="7dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:fontFamily="@font/notosanscjkkr_medium_cus"
-                    android:gravity="center_vertical"
-                    android:includeFontPadding="false"
-                    android:text="매매"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/black" />
-
-                <TextView
-                    android:id="@+id/tv_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:fontFamily="@font/notosanscjkkr_medium_cus"
-                    android:gravity="center_vertical"
-                    android:includeFontPadding="false"
-                    android:text="서울"
-                    android:textColor="@color/black"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:background="@color/black" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="10dp"
-                    android:fontFamily="@font/notosansmonocjkkr_bold_cus"
-                    android:gravity="center_vertical"
-                    android:includeFontPadding="false"
-                    android:text="안심거래"
-                    android:textColor="@color/point_skyblue"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/call" />
-            </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:background="@color/line_gray" />
 </LinearLayout>
