--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#182641</color>
+    <color name="colorPrimaryDark">#182641</color>
+    <color name="colorAccent">#31459b</color>
 
     <color name="main_tab_text">#5c5c5c</color>
     <color name="main_back1">#eaebf0</color>
